# shop

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_02_1633-1559cf5fc59f_create_table_users.py  2025_09_03_1150-73eab817b5bc_create_table_users.py  2025_09_03_1152-046c8797003f_create_table_orders_with_relation_to_.py  2025_09_03_1155-30c3076139b0_create_table_products.py  2025_09_03_1533-5e67d8683a5c_create_secondary_table.py  2025_09_05_1112-c47acf2fa495_create_order_items_table.py  2025_09_07_2112-7953a6ec52bf_add_enum_status_to_table_orders.py  2025_09_09_1145-9b9f133c7ec3_set_default_value_for_total_price_in_.py
application/: main.py
application/api/: __init__.py  order.py  order_items.py  product.py  user.py
application/auth/: __init__.py  auth_views.py  helpers_auth.py  jwt.py  security.py  token.py
application/core/: __init__.py  config.py
application/crud/: __init__.py  order.py  order_items.py  product.py  user.py
application/db/: __init__.py  database.py
application/middlewares/: __init__.py  logging_middleware.py  times_middleware.py
application/models/: __init__.py  order.py  order_items.py  product.py  user.py
application/schemas/: __init__.py  order.py  order_items.py  product.py  token.py  user.py
application/utils/: __init__.py  security.py
tests/: conftest.py
tests/integration/: test_user.py
tests/unit/: test_other.py  test_user.py
